get tests working under jdk1.6 by setting the endorsed override directory